--- a/index.html
+++ b/index.html
@@ -1,1 +1,165 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Mathematics Project Portfolio</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: "Segoe UI", Tahoma, sans-serif;
+            background: linear-gradient(120deg, #f0f4ff, #e6ecff);
+            color: #333;
+        }
+
+        header {
+            background: linear-gradient(135deg, #4b6cb7, #182848);
+            color: white;
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+            letter-spacing: 1px;
+        }
+
+        header p {
+            margin-top: 10px;
+            font-size: 1.1em;
+            opacity: 0.9;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 30px auto;
+            padding: 20px;
+        }
+
+        .card {
+            background: white;
+            border-radius: 12px;
+            padding: 25px;
+            margin-bottom: 25px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+        }
+
+        h2 {
+            color: #182848;
+            border-bottom: 2px solid #4b6cb7;
+            padding-bottom: 8px;
+        }
+
+        ul {
+            padding-left: 20px;
+        }
+
+        ul li {
+            margin: 8px 0;
+        }
+
+        .info-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
+        }
+
+        .info-box {
+            background: #f4f7ff;
+            padding: 15px;
+            border-radius: 8px;
+            border-left: 5px solid #4b6cb7;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #182848;
+            color: white;
+            font-size: 0.9em;
+        }
+
+        footer span {
+            opacity: 0.8;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Mathematics Project Portfolio</h1>
+    <p>KLE Technological University · Academic Year 2025</p>
+</header>
+
+<div class="container">
+
+    <div class="card">
+        <h2>Student Information</h2>
+        <div class="info-grid">
+            <div class="info-box"><strong>Name:</strong> Keerthi Raikar</div>
+            <div class="info-box"><strong>Department:</strong> Computer Science (CS)</div>
+            <div class="info-box"><strong>Division:</strong> D</div>
+            <div class="info-box"><strong>Subject:</strong> Mathematics</div>
+            <div class="info-box"><strong>University:</strong> KLE Technological University</div>
+            <div class="info-box"><strong>Academic Year:</strong> 2025</div>
+        </div>
+    </div>
+
+    <div class="card">
+        <h2>Introduction</h2>
+        <p>
+            This Mathematics Project Portfolio presents the topics studied during
+            the semester. It includes explanations, solved examples, and learning
+            outcomes to demonstrate understanding of mathematical concepts.
+        </p>
+    </div>
+
+    <div class="card">
+        <h2>Objectives</h2>
+        <ul>
+            <li>To revise all mathematics topics covered in the semester</li>
+            <li>To strengthen conceptual understanding</li>
+            <li>To improve analytical and problem-solving skills</li>
+            <li>To present academic work in a structured digital format</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Topics Covered</h2>
+        <ul>
+            <li>Number Systems</li>
+            <li>Algebra</li>
+            <li>Linear Equations</li>
+            <li>Geometry</li>
+            <li>Mensuration</li>
+            <li>Data Handling</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Learning Outcome</h2>
+        <p>
+            By working on this portfolio, I gained a better understanding of
+            mathematical concepts and improved my confidence in solving problems
+            using logical and systematic approaches.
+        </p>
+    </div>
+
+    <div class="card">
+        <h2>Conclusion</h2>
+        <p>
+            This Mathematics Project Portfolio reflects my learning throughout
+            the academic semester and serves as a valuable reference for revision
+            and future studies.
+        </p>
+    </div>
+
+</div>
+
+<footer>
+    <span>© 2025 Keerthi Raikar · Mathematics Project Portfolio</span>
+</footer>
+
+</body>
+</html>
 
